# VulkanRasterizer

./: CMakeLists.txt  README.md
shaders/: DepthFrag.spv  DepthVert.spv  GBuffer.frag  GBuffer.vert  GBufferFrag.spv  GBufferVert.spv  compile.bat  cubemap.vert  depth.frag  depth.vert  frag.spv  hdr.frag  irrCubemap.frag  irradiance.frag  shader.frag  shader.vert  shadow.vert  vert.spv
src/: AllocationTracker.cpp  AllocationTracker.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  File.h  ImageFrame.cpp  ImageFrame.h  PhysicalDevicePicker.cpp  PhysicalDevicePicker.h  Renderer.cpp  Renderer.h  ResourceTracker.cpp  ResourceTracker.h  VertexExtractor.cpp  VertexExtractor.h  Window.cpp  Window.h  main.cpp  vmaFile.h
src/DescriptorSets/: DescriptorSets.cpp  DescriptorSets.h
src/Factories/: DebugMessengerFactory.cpp  DebugMessengerFactory.h  DepthImageFactory.cpp  DepthImageFactory.h  DescriptorSetFactory.cpp  DescriptorSetFactory.h  ImageFactory.cpp  ImageFactory.h  InstanceFactory.cpp  InstanceFactory.h  LogicalDeviceFactory.cpp  LogicalDeviceFactory.h  MeshFactory.cpp  MeshFactory.h  PipelineFactory.cpp  PipelineFactory.h  ShaderFactory.cpp  ShaderFactory.h  SwapChainFactory.cpp  SwapChainFactory.h
src/Math/: math.h
src/Passes/: ColorPass.cpp  ColorPass.h  DepthPass.cpp  DepthPass.h  GBufferPass.cpp  GBufferPass.h  HDRPass.cpp  HDRPass.h  ShadowPass.cpp  ShadowPass.h
src/Structs/: Lights.cpp  Lights.h  Mesh.h  UBOStructs.h
